# train-departure-display

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
src/: main.py  trains.py  traintime.py  weather.py
